tests/baselines/reference/callConstructAssignment(strict=true).errors.txt
callConstructAssignment.ts(5,1): error TS2322: Type 'new () => any' is not assignable to type '() => void'.
  Type 'new () => any' provides no match for the signature '(): void'.
callConstructAssignment.ts(5,7): error TS2454: Variable 'bar' is used before being assigned.
callConstructAssignment.ts(6,1): error TS2322: Type '() => void' is not assignable to type 'new () => any'.
  Type '() => void' provides no match for the signature 'new (): any'.


==== callConstructAssignment.ts (3 errors) ====
    var foo:{ ( ):void; }
    
    var bar:{ new ( ):any; }
    
    foo = bar; // error
    ~~~
!!! error TS2322: Type 'new () => any' is not assignable to type '() => void'.
!!! error TS2322:   Type 'new () => any' provides no match for the signature '(): void'.
          ~~~
!!! error TS2454: Variable 'bar' is used before being assigned.
    bar = foo; // error
    ~~~
!!! error TS2322: Type '() => void' is not assignable to type 'new () => any'.
!!! error TS2322:   Type '() => void' provides no match for the signature 'new (): any'.